# nvPressPanel

./: LICENSE  README.md  deploy.bat  deploy.sh  package.json
.github/workflows/: node.js.yml
arco-backend/: App.py  Functions.py  config.json  pyproject.toml
arco-backend/templates/: index.html
arco-frontend/: components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
arco-frontend/src/: App.vue  main.ts
arco-frontend/src/components/: ChangeUsername.vue  UserManager.vue
arco-frontend/src/errors/: 404.vue
arco-frontend/src/pages/: Home.vue  (+2 more)
backend/: App.py  Functions.py  Test.py  config.json  index.html  pyproject.toml  requirements.txt
backend/assets/: 404-80a6c929.js  Caddy-0b0621a5.js  Caddy_settings-7f7f9144.js  Docker-ff01a920.js  Docker_settings-7eeec1d2.js  FTP-a3b6fbe9.js  Home-53337711.css  Home-cbd8629b.js  Login-10f7aa1c.js  Login-ca27741e.css  Logout-06ed7ed2.js  System_settings-c3a6694e.css  System_settings-e14b3aae.js  index-68af38a3.js  index-8b360213.js  index-9c93cf46.js  index-af604ea7.js  index-ce91f93b.css  index-d2d08b7e.css  index-e12eb8d6.js  index-f4d17131.css  nvPress-da6149e9.js  sha3-9e1b39c1.js
backend/templates/: index.html
docs/: .dumirc.ts  LICENSE  README.md  package.json  pnpm-lock.yaml
docs/docs/: index.md
frontend/: babel.config.js  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.js  style.css  vite-env.d.ts
web/: daemon.json  ftp.py  index.html  install.py  nvPressPanel.service  nvpress.service  requirements.txt  update.sh
(+67 files in other folders)
