[tool.poetry]
name = "arco-backend"
version = "1.1.0"
description = ""
authors = ["VMTask <congmingfan@outlook.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
psutil = "^5.9.4"
jinja2 = "^3.1.2"
aiofiles = "^23.1.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
